--- a/src/main/jbake/content/hawkular-services/docs/quickstart-guide/index.adoc
+++ b/src/main/jbake/content/hawkular-services/docs/quickstart-guide/index.adoc
@@ -12,7 +12,7 @@ toc::[]
 
 == Install Hawkular
 
-Please refer to the link:../installation-guide/[installation guide] to install Hawkular Server
+Please refer to the link:../installation-guide/[installation guide] to install Hawkular Server. To execute the commands below, make sure to create a user `myUsername` with the password `myPassword`.
 
 == Step 1: Add metrics
 In this quickstart guide, we'll start by injecting metrics in the server. For this part we don't need additional metadata nor tags on our metrics,
@@ -22,18 +22,18 @@ Let's say we want to insert Weather temperature from a sensor so that we can kee
 
 NOTE: Hawkular Services provides different libraries for different languages, but here we will just use the REST API with CURL.
 
-Copy the following content in a file named `request.json`, it contains weather data collected every 30 min for the whole day of July 15th 2016.
+Copy the following content in a file named `metrics_day_1.json`, it contains weather data collected every 30 min for the whole day of July 15th 2016.
 
-.request.json
+.metrics_day_1.json
 ----
-include::includes/request.json[]
+include::includes/metrics_day_1.json[]
 ----
 
 To insert metrics, we just need a running Hawkular Server and make sure we created a user according to the instructions. You can replace the values of the `Hawkular-Tenant` and `temperature` in the URL
 with the values of your choice, in this simple scenario, we don't need to make additional calls to create those.
 
 ----
-curl -u myUsername:myPassword -X POST http://localhost:8080/hawkular/metrics/gauges/temperature/raw -d @request.json -H "Content-Type: application/json" -H "Hawkular-Tenant: myTenant"
+curl -u myUsername:myPassword -X POST http://localhost:8080/hawkular/metrics/gauges/temperature/raw -d @metrics_day_1.json -H "Content-Type: application/json" -H "Hawkular-Tenant: myTenant"
 ----
 
 Now your data is stored in Hawkular Server, in it's distributed Cassandra server. It's ready to be used !
@@ -268,3 +268,60 @@ curl -u myUsername:myPassword -X GET "http://localhost:8080/hawkular/metrics/gau
 .Learn more
 NOTE: We only scratched the surface of what we can do when storing and retrieving metrics, in the link:/hawkular-metrics/docs/user-guide/#_downsampling[Metrics User Guide]
 you will see how to tag metrics, aggregate values from various metrics and other advanced features.
+
+== Step 3: Add alert definition
+
+We saw how to add metrics, visualize those and make some computation, now we'll see how to be notified for particular conditions.
+An alert trigger consists of:
+- A set of conditions to trigger the alert/event/notification
+- One or multiple actions to take when the conditions are met (sending an email, call a webhook, start/stop new docker containers or VM for autoscaling...)
+- Some additional metadata (such as the severity, a description...)
+
+Here is the example we will use here, in that example we put all in a single file, while in practice the actions may be separated as they are reusable among various triggers.
+This basic example would send an email to 'admin@example.org' if the temperature gets below 0 degrees Celcius (Water freezing point)
+
+.Alert trigger definition
+
+.trigger_definition.json
+----
+include::includes/trigger_definition.json[]
+----
+
+To import that trigger definition, we'll use the `import` command of the REST API.
+---
+curl -u myUsername:myPassword -X POST http://localhost:8080/hawkular/alerts/import/all -d @includes/alert-definition.json \
+   -H "Content-Type: application/json" -H "Hawkular-Tenant: myTenant"
+---
+
+== Step 4: Test the alert trigger
+
+From now on, if we enter metrics that satisfy the condition, an email would be send (assuming an email server is available and configured).
+Let's try to enter more metrics, similar to what we did earlier.
+
+.metrics_day_2.json
+----
+include::includes/metrics_day_2.json[]
+----
+
+And execute the command to store the metrics (and will evaluate against our alert trigger conditions):
+----
+curl -u myUsername:myPassword -X POST http://localhost:8080/hawkular/metrics/gauges/temperature/raw -d @metrics_day_2.json \
+   -H "Content-Type: application/json" -H "Hawkular-Tenant: myTenant"
+----
+
+In the logs of Hawkular Services, you should see 3 INFO messages showing that the conditions were met such as:
+----
+11:59:37,361 INFO  [org.hawkular.alerts.actions.api] (Thread-251 (ActiveMQ-client-global-threads-1118700939)) HAWKALERT240001: Plugin [email] has received an action message: [BusActionMessage[action=Action[eventId='temperature-trigger-1472551176767-dc41aaf3-bdd7-4a89-a950-44dc92f10c8b', ctime=1472551176769, event=Alert [alertId=temperature-trigger-1472551176767-dc41aaf3-bdd7-4a89-a950-44dc92f10c8b, status=OPEN, ackTime=0, ackBy=null, resolvedTime=0, resolvedBy=null, context={}], result='null']]]
+11:59:37,385 INFO  [org.hawkular.alerts.actions.api] (Thread-242 (ActiveMQ-client-global-threads-1118700939)) HAWKALERT240001: Plugin [email] has received an action message: [BusActionMessage[action=Action[eventId='temperature-trigger-1472551176770-300fda0d-2c82-46e3-9f09-f4e9ed4ffa3a', ctime=1472551176771, event=Alert [alertId=temperature-trigger-1472551176770-300fda0d-2c82-46e3-9f09-f4e9ed4ffa3a, status=OPEN, ackTime=0, ackBy=null, resolvedTime=0, resolvedBy=null, context={}], result='null']]]
+11:59:37,384 INFO  [org.hawkular.alerts.actions.api] (Thread-253 (ActiveMQ-client-global-threads-1118700939)) HAWKALERT240001: Plugin [email] has received an action message: [BusActionMessage[action=Action[eventId='temperature-trigger-1472551176759-90040813-1b7a-4bda-ac65-1c7f673d4daa', ctime=1472551176760, event=Alert [alertId=temperature-trigger-1472551176759-90040813-1b7a-4bda-ac65-1c7f673d4daa, status=OPEN, ackTime=0, ackBy=null, resolvedTime=0, resolvedBy=null, context={}], result='null']]]
+----
+
+== More
+Congratulations, you just scratched the surface of Hawkular Services ! We played with basic metrics and alert capabilities, both have more advanced features and we didn't tackle the inventory service in this getting started guide, we would suggest to have a look at their respective APIs: link:/docs/rest/rest-alerts.html[Alerting REST API], link:/docs/rest/rest-metrics.html[Metrics REST API] and link:/docs/rest/rest-inventory.html[Inventory REST API]
+
+Note that multiple client libraries have been written already, and some agent can collect or listen to metrics to feed the system. Have a look at the link:/hawkular-clients/[clients page] to see what it supported as of today (We love contributions !) 
+
+
+
+
+
